# aftermath

./: Cargo.toml  README.md  flake.nix
src/: differentiation.rs  eval.rs  expr.rs  lib.rs  reduce.rs  token_stream.rs
